--- a/src/ZM.SignalR.Integrations.WebApiMvc/Views/Shared/_Layout.cshtml
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/Views/Shared/_Layout.cshtml
@@ -7,19 +7,6 @@
     <meta name="viewport" content="width=device-width" />
 
     @Styles.Render("~/Content/css")
-
-    <style>
-    
-        /*body {
-            padding-top: 10px;
-        }*/
-
-        .validation-summary-errors {
-            font-weight: bold;
-            color: #f00;
-        }
-    
-    </style>
     
     @Scripts.Render("~/bundles/modernizr")
 
@@ -34,12 +21,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("API Tester", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("SignalR Stuff", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Find a Human", "Human", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Find a Human", "HumanSearch", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Find an API", "ApiSearch", "Home", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
@@ -48,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - ZM (WaffleSquirrel)</p>
+            <p>&copy; @DateTime.Now.Year - Waffle Squirrel (Team Zombie Monkey)</p>
         </footer>
     </div>
 
