--- a/src/ZM.SignalR.Integrations.WebApiMvc/Views/Home/HumanSearch.cshtml
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/Views/Home/HumanSearch.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Human";
+    ViewBag.Title = "Search for a Human";
 }
 
 @section Styles
@@ -11,11 +11,11 @@
 @section Scripts
 {
     <script>
-        var HumanModel = ko.observable(@Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(new ZM.SignalR.WebApi.Models.Human())));
+        var HumanModel = ko.observable(@Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(new ZM.SignalR.Integrations.WebApiMvc.Models.Human())));
         var errors = ko.observableArray();
     </script>
 
-    <script src="~/Scripts/api-get-human.js"></script>
+    <script src="~/Scripts/api-get-human.js?seed=@DateTime.Now.Ticks.ToString()"></script>
 
     @Scripts.Render("~/bundles/prettifyJs")
 }
@@ -27,16 +27,16 @@
 </div>
 <div class="form-group">
     <label>Human Identification #</label>
-    <input class="form-control" data-bind="value: input.humanId" />
+    <input class="form-control" data-bind="value: inputModel.humanId" />
 </div>
 <div class="form-group">
     <label>Guess a Number from 1 to 100</label>
-    <input class="form-control" data-bind="value: input.guessedNumber" />
+    <input class="form-control" data-bind="value: inputModel.guessedNumber" />
 </div>
-<button class="btn btn-primary" data-bind="click: GetHuman">Find Human</button>
+<button class="btn btn-primary" data-bind="click: GetHuman">Find a Human</button>
 
 
-<h2>Human</h2>
+<h2>Search Results</h2>
 <div class="well">
     <pre class="prettyprint">
     Human ID: <!--ko text: humanViewModel.humanId--><!--/ko-->
