Fixing knockout binding for Human Search.

--- a/src/ZM.SignalR.Integrations.WebApiMvc/Views/Home/HumanSearch.cshtml
+++ b/src/ZM.SignalR.Integrations.WebApiMvc/Views/Home/HumanSearch.cshtml
@@ -39,8 +39,8 @@
 <h2>Search Results</h2>
 <div class="well">
     <pre class="prettyprint">
-    Human ID: <!--ko text: humanViewModel.humanId--><!--/ko-->
-    Gender: <!--ko text: humanViewModel.gender--><!--/ko-->
-    Note To Self: <!--ko text: humanViewModel.noteToSelf--><!--/ko-->
+    Human ID: <!--ko text: viewModel.humanId--><!--/ko-->
+    Gender: <!--ko text: viewModel.gender--><!--/ko-->
+    Note To Self: <!--ko text: viewModel.noteToSelf--><!--/ko-->
     </pre>
 </div>
